# aula017

./: README.md  criando_db.py  meubanco.db  pyproject.toml
