[tool.poetry]
name = "aula017"
version = "0.1.0"
description = ""
authors = ["alexssandrodamiao <alexssandro.damiao@acertpix.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
